<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAlunoActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTituloCadAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cad_aluno_titurlo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cadAlunoTxtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cad_aluno_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtTituloCadAluno"
        app:layout_constraintStart_toStartOf="@+id/txtTituloCadAluno"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCadAluno" />

    <EditText
        android:id="@+id/cadAlunoTxtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cad_aluno_telefone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtNome"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtNome"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtNome" />

    <EditText
        android:id="@+id/cadAlunoTxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cad_aluno_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtTelefone"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtTelefone" />

    <EditText
        android:id="@+id/cadAlunoTxtSite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cad_aluno_site"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtEmail" />

    <RatingBar
        android:id="@+id/rbarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtSite"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtSite"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtSite" />

    <Button
        android:id="@+id/btnCadastrarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/rbarNota"
        app:layout_constraintStart_toStartOf="@+id/rbarNota"
        app:layout_constraintTop_toBottomOf="@+id/rbarNota" />
</android.support.constraint.ConstraintLayout>
</ScrollView>